# whisper-example

./: README.md  pyproject.toml  requirements.txt  setup.sh  transcribe.py
