[project]
name = "whisper-example"
version = "0.1.0"
description = "Your project description"
dependencies = [
    "openai"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "uv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true 